Mira por alguna razon ahora no se ve bien el calendario, se ve como gris

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,7 +144,7 @@
     border-top: none;
 }
 .rbc-off-range-bg { /* Days not in the current month */
-  @apply bg-muted/30;
+  @apply bg-transparent;
 }
 .rbc-today {
   @apply bg-secondary !important; 
@@ -380,3 +380,6 @@
   overflow-y: auto; 
 }
 
+
+
+    
